[package]
name = "hyper-tls"
version = "0.3.2" # don't forget html_root_url in lib.rs
description = "Default TLS implementation for use with hyper"
authors = ["Sean McArthur <sean@seanmonstar.com>"]
license = "MIT/Apache-2.0"
keywords = ["hyper", "tls", "http", "https", "ssl"]
homepage = "https://hyper.rs"
repository = "https://github.com/hyperium/hyper-tls"
documentation = "https://docs.rs/hyper-tls"
edition = "2018"

[features]
vendored = ["native-tls/vendored"]

[dependencies]
native-tls = "0.2"
hyper = { git = "https://github.com/hyperium/hyper" }
tokio-io = "0.2.0-alpha.4"
tokio-tls = { git = "https://github.com/tokio-rs/tokio", rev = "15dc0563b73d9da3eabdbac89e55b9cfcef691e4" }

[dev-dependencies]
tokio = "0.2.0-alpha.4"

[patch.crates-io]
tokio-io = { git = "https://github.com/tokio-rs/tokio", rev = "15dc0563b73d9da3eabdbac89e55b9cfcef691e4" }
tokio-tls = { git = "https://github.com/tokio-rs/tokio", rev = "15dc0563b73d9da3eabdbac89e55b9cfcef691e4" }
